New contact information added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <p>Email: <a href="mailto:dvishal.org@gmail.com">dvishal.org@gmail.com</a></p>
         <p>Mobile: <a href="tel:+919155349484">+91-9155349484</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/vishal-dey-aa3362356" target="_blank">/in/vishal-dey-aa3362356</a></p>
+        <p>Instagram: <a href= https://www.instagram.com/thevishaldey target="blank">thevishaldey</a></p>
     </section>
 
     <footer>
